--- a/time-off-management/src/main/resources/templates/admin-home.html
+++ b/time-off-management/src/main/resources/templates/admin-home.html
@@ -32,7 +32,7 @@
 						class="d-flex align-items-center nav-link dropdown-toggle"
 						data-bs-toggle="dropdown">
 							<div class="avatar avatar-xl">
-								<img th:src="@{/images/profile.jpg}" class="rounded-circle"
+								<img th:src="@{/images/admin.jpg}" class="rounded-circle"
 									alt="Face 1" style="width: 50px; height: 50px;">
 							</div>
 							<div class="m-3 text-container">
@@ -63,7 +63,7 @@
 
 		<div class="row px-5 mt-4">
 			<div class="form-group search">
-				<input type="text" class="form-control" style="background-color:#95d2b3" placeholder="Search leaves">
+				<input type="text" class="form-control"  placeholder="Search leaves">
 			</div>
 
 		</div>
