--- a/time-off-management/src/main/resources/templates/change-password.html
+++ b/time-off-management/src/main/resources/templates/change-password.html
@@ -13,8 +13,8 @@
             margin: 0;
             padding: 0;
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #2c3e50, #000000);
-            color: #ffffff;
+             background: #d8efd3;
+            color: #55ad9b;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -23,7 +23,7 @@
         }
 
         .password-change-container {
-            background: rgba(0, 0, 0, 0.8);
+           background: #95d2b3;
             padding: 40px;
             border-radius: 12px;
             text-align: center;
@@ -71,8 +71,8 @@
         }
 
         .input-container input:focus {
-            background: rgba(255, 255, 255, 0.2);
-            box-shadow: 0 0 10px rgba(98, 0, 234, 0.7);
+               background: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 0 10px #95d283;
         }
 
         .input-container i {
@@ -80,11 +80,11 @@
             left: 15px;
             top: 50%;
             transform: translateY(-50%);
-            color: #6200ea;
+            color: #55ad9b;
         }
 
         .password-change-container button[type="submit"] {
-            background: linear-gradient(45deg, #6200ea, #b388ff);
+            background: #55ad9b;
             color: white;
             padding: 15px 20px;
             border: none;
@@ -98,18 +98,16 @@
         }
 
         .password-change-container button[type="submit"]:hover {
-            background: linear-gradient(45deg, #b388ff, #6200ea);
             transform: translateY(-3px);
-            box-shadow: 0 8px 15px rgba(98, 0, 234, 0.3);
+            box-shadow: 0 8px 15px #95d283;
         }
 
         .password-change-container button[type="submit"]:active {
             transform: translateY(0);
-            box-shadow: 0 4px 8px rgba(98, 0, 234, 0.2);
         }
 
         .password-change-container .input-container input::placeholder {
-            color: #cccccc;
+            color: #000;
         }
 
         .alert {
