--- a/time-off-management/src/main/resources/templates/create-position.html
+++ b/time-off-management/src/main/resources/templates/create-position.html
@@ -46,11 +46,12 @@ body {
 }
 
 .form-control:hover {
-	background-color: #000;
+	background-color: white;
+	color:#000;
 }
 
 .form-control:focus {
-	background-color: #000;
+	background-color: white;
 }
 
 .btn-submit {
