--- a/time-off-management/src/main/resources/templates/department-list.html
+++ b/time-off-management/src/main/resources/templates/department-list.html
@@ -75,7 +75,7 @@ main {
 }
 
 .form-control:focus {
-	background-color: rgb(26, 26, 27);
+	background-color: white;
 	border-color: dark;
 	box-shadow: 0 0 0 0.25rem rgba(98, 0, 234, 0.25);
 }
