--- a/time-off-management/src/main/resources/templates/fragments/user-sidebar.html
+++ b/time-off-management/src/main/resources/templates/fragments/user-sidebar.html
@@ -5,10 +5,9 @@
 	<nav th:fragment="usersidebar" class="sidebar ">
 
 		<div class="brand">
-			<img th:src="@{/images/Eru.jpg}" class="brand-logo"
-				alt="Profile Picture"> <span class="brand-name"
-				style="color: gray;">Linn</span>
-		</div>
+            <span class="brand-name" style="color: dark;">TIME-OFF</span>
+        </div>
+        
 
 
 		<ul class="menu-items">
