--- a/time-off-management/src/main/resources/templates/leave-request.html
+++ b/time-off-management/src/main/resources/templates/leave-request.html
@@ -5,9 +5,7 @@
 <head>
 <title>Leave Requests</title>
 <style>
-.card {
-	border: 4px solid #0d6efd;
-}
+
 </style>
 </head>
 <body>
@@ -34,7 +32,7 @@
 							<div class="m-3 text-container">
 								<div class="text-content">
 									<h5 class="font-bold text-truncate"
-										style="color: white; font-size: 14px">
+										style="color: #000; font-size: 14px">
 										<span th:text="${name}"></span>
 									</h5>
 									<h6 class="text-muted mb-0 text-truncate">
