--- a/time-off-management/src/main/resources/templates/position-list.html
+++ b/time-off-management/src/main/resources/templates/position-list.html
@@ -37,7 +37,7 @@ body {
 	margin: 15px;
 	width: calc(33.333% - 30px);
 	background-color: #d8efd3;
-	color: #55ad9b;
+	color: #000;
 	border: none;
 	border-radius: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -57,7 +57,7 @@ body {
 	margin-bottom: 15px;
 	font-size: 20px;
 	font-weight: bold;
-	color: #55ad9b;
+	color: #000;
 }
 
 .card-text {
@@ -66,11 +66,11 @@ body {
 }
 
 .card-text strong {
-	color: #55ad9b;
+	color: #000;
 }
 
 .card-text span {
-	color: #55ad9b;
+	color: #000;
 }
 
 .icon {
@@ -80,7 +80,7 @@ body {
 
 .card-header {
 	background-color: #d8efd3;
-	color: #55ad9b;
+	color: #000;
 	padding: 10px;
 	border-bottom: 1px solid #000;
 	border-top-left-radius: 10px;
@@ -90,7 +90,7 @@ body {
 
 .btn-add {
 	background-color: #d8efd3;
-	color: #55ad9b;
+	color: #000;
 	border: none;
 	padding: 12px 30px;
 	border-radius: 5px;
@@ -138,40 +138,35 @@ body {
 	width: 70%;
 }
 
-.form-control{
-	background-color: #d8efd3;
+.custom{
+	border-radius: 15px;
+	border: 1px solid #000;
 }
 
-.form-control:focus {
-		background-color: #d8efd3;
-
-    border-color: #55ad98;
-    box-shadow: 0 0 0 0.25rem rgb(98 0 234 / 25%);
-    }
-  
     .btn-secondary {
-    color: whitesmoke;
+    color: #000;
     background-color: #55ad9b;
     border-color: #292a2c;
     border-radius: 10px;
+    }
 </style>
 </head>
 <body>
 	<section layout:fragment="content">
 		<div class="container mt-4">
 			<header class="header">
-				<h1 style="color:#000">TIME-OFF</h1>
+				<h1 style="color:#000;">TIME-OFF</h1>
 			</header>
 			<div class="row mb-4">
-			<div class="col-2"></div>
-				<div class="col-10">
+			<div class="col-1"></div>
+				<div class="col-11">
 					<form th:action="@{/positions}" method="get">
 
     <div class="row align-items-center">
         <div class="col-md-4 mb-2">
             <div class="input-group">
                
-                <input type="text" class="form-control" id="department" name="department"
+                <input type="text" class="form-control custom" id="department" name="department"
                        th:value="${search != null ? search.department() : ''}"
                        placeholder="Search by Department Code" />
             </div>
@@ -179,7 +174,7 @@ body {
         <div class="col-md-4 mb-2">
             <div class="input-group">
               
-                <input type="text" class="form-control" id="position" name="position"
+                <input type="text" class="form-control custom" id="position" name="position"
                        th:value="${search != null ? search.position() : ''}"
                        placeholder="Search by Position Code" />
             </div>
@@ -207,7 +202,7 @@ body {
 			</div>
 			<div class="card-container">
 				<div class="card" th:each="position : ${positions}">
-					<div class="card-header" style="color:#55ab9b;">Position Details</div>
+					<div class="card-header" style="color:#000;">Position Details</div>
 					<div class="card-body">
 						<h5 class="card-title">
 							<i class="fas fa-briefcase icon"></i> Position Info
