--- a/time-off-management/src/main/resources/templates/update-employee.html
+++ b/time-off-management/src/main/resources/templates/update-employee.html
@@ -10,8 +10,8 @@
 <style>
 body {
 	font-family: Arial, sans-serif;
-	background-color: #1c1e22;
-	color: #d3d4d6;
+	background-color: #d8efd3;
+	color: #000;
 	margin: 0;
 	padding: 0;
 }
@@ -28,18 +28,18 @@ body {
 }
 
 .header h1 {
-	color: #d3d4d6;
+	color: #000;
 	font-size: 36px;
 	margin-bottom: 10px;
 }
 
 .header h2 {
-	color: #d3d4d6;
+	color: #000;
 	font-size: 24px;
 }
 
 .form-container {
-	background-color: #2d3340;
+	background-color: #d8efd3;
 	border-radius: 10px;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 	padding: 40px;
@@ -53,23 +53,23 @@ body {
 	font-weight: bold;
 	display: block;
 	margin-bottom: 5px;
-	color: #d3d4d6;
+	color: #000;
 }
 
 .form-control {
 	width: 100%;
 	padding: 10px;
-	border: 1px solid #444950;
+	border: 1px solid #000;
 	border-radius: 5px;
 	transition: border-color 0.3s;
-	background-color: #1c1e22;
-	color: #d3d4d6;
+	background-color: #d8efd3;
+	color: #000;
 }
 
 .form-control:focus {
 	outline: none;
 	border-color: #6c757d;
-	background-color: gray;
+	background-color: whitesmoke;
 }
 
 select.form-control {
@@ -77,8 +77,8 @@ select.form-control {
 }
 
 .btn-save {
-	background-color: #007bff;
-	color: #fff;
+	background-color: #55ad9b;
+	color: #000;
 	border: none;
 	padding: 12px 24px;
 	border-radius: 5px;
@@ -87,7 +87,7 @@ select.form-control {
 }
 
 .btn-save:hover {
-	background-color: #0056b3;
+	background-color: #55ad9b;
 }
 
 .btn-save i {
