--- a/time-off-management/src/main/resources/templates/create-position.html
+++ b/time-off-management/src/main/resources/templates/create-position.html
@@ -16,14 +16,14 @@ body {
 }
 
 .header {
-	color: #d3d3d3;
+	color: #000;
 	text-align: center;
 	margin-bottom: 20px;
 }
 
 .brand-title {
 	font-size: 24px;
-	color: #55ad9b;
+	color: #000;
 }
 
 .form-container {
@@ -36,13 +36,13 @@ body {
 }
 
 .form-group label {
-	color: #55ad9b;
+	color: #000;
 }
 
 .form-control {
 	background-color: #d8efd3;
 	border: 1px solid #55ad9b;
-	color: #d3d3d3;
+	color: #000;
 }
 
 .form-control:hover {
@@ -56,7 +56,7 @@ body {
 
 .btn-submit {
 	background-color: #d8efd3;
-	color: #55ad9b;
+	color: #000;
 	border: none;
 	padding: 12px 30px;
 	border-radius: 5px;
@@ -74,7 +74,7 @@ body {
 
 .btn-back {
 	background-color: #d8efd3;
-	color: #55ad9b;
+	color: #000;
 	border: none;
 	padding: 12px 30px;
 	border-radius: 5px;
