--- a/time-off-management/src/main/resources/templates/department-list.html
+++ b/time-off-management/src/main/resources/templates/department-list.html
@@ -17,6 +17,15 @@ body {
 	color: #55ad9b;
 }
 
+.header {
+	color: #000;
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+.brand-title {
+	font-size: 24px;
+}
 main {
 	min-height: 100vh;
 	padding: 20px 0;
@@ -196,8 +205,8 @@ main {
 </head>
 <body>
 	<section layout:fragment="content">
-		<div class="row px-5 mt-4">
-			<header class="col-12 text-center mb-4">
+		<div class="container row px-5 mt-4">
+			<header class="header col-12  mb-4">
 				<h1 style="color: #000;">TIME-OFF</h1>
 				<h2 class="brand-title" style="color:#000">Department Management</h2>
 			</header>
