--- a/time-off-management/src/main/resources/templates/fragments/user-sidebar.html
+++ b/time-off-management/src/main/resources/templates/fragments/user-sidebar.html
@@ -13,14 +13,34 @@
 		<ul class="menu-items">
 			<li><a th:href="@{/home}"
 				th:classappend="${page == 'home' ? 'active' : ''}" class="menu-item">
-					<i class="fas fa-home"></i> <span>Requests</span>
+					<i class="fa-solid fa-bell"></i> <span>Requests</span>
 			</a></li>
-			<li><a th:href="@{/leave-application}"
+
+			<li><a th:href="@{/leave-history}"
+				th:classappend="${page == 'records' ? 'active' : ''}"
+				class="menu-item"> <i class="fa-solid fa-folder-open"></i> <span>Records</span>
+			</a></li>
+			<li sec:authorize="hasAuthority('Admin')"><a
+				th:href="@{/departments}"
+				th:classappend="${page == 'departments' ? 'active' : ''}"
+				class="menu-item"> <i class="fa-solid fa-building"></i> <span>Departments</span>
+			</a></li>
+			<li sec:authorize="hasAuthority('Admin') or hasAuthority('HOD')"><a th:href="@{/employees}" 
+				th:classappend="${page == 'employees' ? 'active' : ''}"
+				class="menu-item"> <i class="fas fa-users"></i> <span>Employees</span>
+			</a></li>
+			<li sec:authorize="hasAuthority('Admin')"><a
+				th:href="@{/positions}"
+				th:classappend="${page == 'positions' ? 'active' : ''}"
+				class="menu-item"> <i class="fas fa-chart-line"></i> <span>Positions</span>
+			</a></li>
+
+			<li sec:authorize="hasAuthority('HOD') or hasAuthority('Employee')"><a
+				th:href="@{/leave-application}"
 				th:classappend="${page == 'form' ? 'active' : ''}" class="menu-item">
 					<i class="fa-solid fa-plus"></i> <span>Leave Form</span>
 			</a></li>
-			<li>
-			<li><a th:href="@{/reports}"
+			<li sec:authorize="hasAuthority('HOD') or hasAuthority('Employee')"><a th:href="@{/reports}"
 				th:classappend="${page == 'reports' ? 'active' : ''}"
 				class="menu-item"> <i class="fa-solid fa-coins"></i> <span>Salaries</span>
 			</a></li>
