--- a/time-off-management/src/main/resources/templates/leave-request.html
+++ b/time-off-management/src/main/resources/templates/leave-request.html
@@ -5,18 +5,19 @@
 <head>
 <title>Leave Requests</title>
 <style>
-
+	
 </style>
 </head>
 <body>
-	<section layout:fragment="content" >
+	<section layout:fragment="content">
 
-		<header class="margin-left" th:fragement="header" >
+		<header class="margin-left" th:fragement="header">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="m-4">
-					<h1 style="color:#000;" class="d-lg-inline mb-4">Leave Requests</h1>
-					<h6 style="color:#000;" class="text-muted d-none d-lg-block mt-3">Here're your
-						leave requests</h6>
+					<h1 style="color: #000;" class="d-lg-inline mb-4">Leave
+						Requests</h1>
+					<h6 style="color: #000;" class="text-muted d-none d-lg-block mt-3">Here're
+						your leave requests</h6>
 				</div>
 				<div class="flex-fill"></div>
 
@@ -41,7 +42,7 @@
 								</div>
 							</div>
 					</a>
-					
+
 
 						<ul class="dropdown-menu">
 
@@ -64,16 +65,27 @@
 			</div>
 
 		</div>
+		
+		  <div class="row mt-5" id="noRequests" th:if="${pending.isEmpty()}" >
+            <div class="col-1"></div>
+            <div class="col-10 nocard">
+                <h5>No Pending Leave Requests</h5>
+                <p>There are currently no pending leave requests.</p>
+            </div>
+            <div class="col-1"></div>
+        </div>
 
 		<div class="mt-5 px-4 mx-3  " style="margin-left: 0px;">
 
-			<div class="container">
+			<div class="container" th:unless="${pending.isEmpty()}">
 				<div class="row">
-					<div class="col-md-4"
+					<div class="col-md-4 mt-3"
 						th:each="leaveApplication : ${leaveApplications}">
-						<div class="card">
-							<div class="card-header">
-								<img src="https://th.bing.com/th/id/OIP.7-nrY0zazKLS9ishJd-17wHaGh?w=164&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="User Icon">
+						<div class="card" th:id="'card-' + ${leaveApplication.id}">
+							<div class="card-header" style="background-color: #55ad9b;">
+								<img
+									src="https://th.bing.com/th/id/OIP.7-nrY0zazKLS9ishJd-17wHaGh?w=164&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+									alt="User Icon">
 								<h5 class="card-title">Leave Request</h5>
 							</div>
 							<div class="card-body">
@@ -84,6 +96,10 @@
 								<p class="card-text">
 									<strong>Name:</strong> <span
 										th:text="${leaveApplication.employeeName}"></span>
+								</p>
+								<p class="card-text">
+									<strong>Department:</strong> <span
+										th:text="${leaveApplication.departmentName}"></span>
 								</p>
 								<p class="card-text">
 									<strong>Leave Type:</strong> <span
@@ -103,9 +119,9 @@
 								</p>
 								<div class="card-footer">
 									<p class="card-text">
-									<strong>Status:</strong> <span
-										th:text="${leaveApplication.status}"></span>
-								</p>
+										<strong>Status:</strong> <span
+											th:text="${leaveApplication.status}"></span>
+									</p>
 								</div>
 							</div>
 						</div>
